# advanced-rag-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: prometheus.yml  retrieval_config.py
config/grafana/dashboards/: rag_dashboard.json
examples/: compare_retrievers.py
src/advanced_rag_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/api/: client.py  main.py  metrics.py
src/embeddings/: embedding_service.py
src/evaluation/: evaluator.py  metrics.py
src/retrieval/: hybrid_retriever.py  reranker.py  retrieval_pipeline.py  retriever.py  sparse_retriever.py  vector_store.py
tests/: conftest.py
tests/unit/: test_api_client.py  test_api_main.py  test_api_metrics.py  test_embeddings.py  test_evaluator.py  test_hybrid_retriever.py  test_metrics.py  test_reranker.py  test_retrieval_pipeline.py  test_sparse_retriever.py  test_vector_store.py
